--- a/client/readme
+++ b/client/readme
@@ -5,7 +5,8 @@
 
 # LAUNCH
 
-python3 passthrough.py basedir mountdir
+python3 abebox.py basedir mountdir
+#python3 passthrough.py basedir mountdir
 # you can read/write files on mountdir
 # find encripted files on basedir
  
