--- a/client/readme
+++ b/client/readme
@@ -1,6 +1,7 @@
 # INSTALL
 
-- install requirements 
+- sudo apt-get install libsasl2-dev python3-dev libldap2-dev libssl-dev
+- install requirements pip3 install -r requirements.txt
 - mkdir basedir mountdir
 
 # LAUNCH
